--- a/now.json
+++ b/now.json
@@ -14,6 +14,14 @@
         "GET"
       ],
       "dest": "/index.js"
+    },
+
+    {
+      "src": "/",
+      "methods": [
+        "GET"
+      ],
+      "dest": "/index.js"
     }
   ]
 }
